helm/ingress.yaml
# The ingress has to be created by a privileged user because
# the RBAC user that is limited to the rki-lk-dashboard
# namespace does not have the necessary privileges.

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: rki-lk-dashboard
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  tls:
    - secretName: tls-certificates
      hosts:
      - covid-dashboard.oberlab.de
  rules:
    - host: covid-dashboard.oberlab.de
      http:
        paths:
          - backend:
              serviceName: app-service
              servicePort: 80
